--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.13.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^3.6.0",
     "swiper": "^12.0.3",
