--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,11 +18,13 @@
     "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.13.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^3.6.0",
     "swiper": "^12.0.3",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
